--- a/knoblibrary/build.gradle
+++ b/knoblibrary/build.gradle
@@ -7,8 +7,8 @@ android {
     defaultConfig {
         minSdkVersion 9
         targetSdkVersion 25
-        versionCode 6
-        versionName "1.2.3"
+        versionCode 7
+        versionName "1.3.0"
     }
     buildTypes {
         release {
@@ -22,4 +22,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:25.0.1'
     compile 'com.facebook.rebound:rebound:0.3.8'
+    compile 'com.github.BeppiMenozzi:BalloonPopup:0.2.1'
 }
